[package]
name = "aaska2"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6"
pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11"
syntect = { version = "5.3.0", features = [] }
maud = { version = "0.27.0" }
tracing = "0.1.44"
petgraph = "0.8.3"
glob = "0.3"
dashmap = "7.0.0-rc2"
sha2 = "0.11.0-rc.4"
rayon = "1.10"
picante = { path = "../picante/crates/picante" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
lazy_static = "1.4"

# Bin
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "aaska2"
path = "src/lib.rs"

[[bin]]
name = "aaska2"
path = "src/aaska-bin/main.rs"

[[example]]
name = "parallel_test"
path = "examples/parallel_test.rs"

[[example]]
name = "parallel_stress"
path = "examples/parallel_stress.rs"

[[example]]
name = "incremental_test"
path = "examples/incremental_test.rs"
