[package]
name = "aaska2"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6"
pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11"
syntect = { version = "5.3.0", features = [] }
maud = { version = "0.27.0" }
tracing = "0.1.44"
petgraph = "0.8.3"

notify-debouncer-mini = { features = ["crossbeam-channel"], version = "0.7.0" }
dashmap = "7.0.0-rc2"
crossbeam-channel = "0.5.15"
sha2 = "0.11.0-rc.4"
rayon = "1.10"
picante = { path = "../picante/crates/picante" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "parallel_test"
path = "examples/parallel_test.rs"

[[example]]
name = "parallel_manual"
path = "examples/parallel_manual.rs"
